salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Account_Data_Change_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Account_Data_Change_Request_Approved__c</fullName>
    <label>Account Data Change Request Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>