salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>vlocity_cmt__Application__c</referenceTo>
    <relationshipLabel>Application Line Items</relationshipLabel>
    <relationshipName>Application_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>