salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Building_Vintage__c.field-meta.xml
<CustomField>
    <fullName>Building_Vintage__c</fullName>
    <label>Building Vintage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-War Uninsulated Brick</fullName>
            </value>
            <value>
                <fullName>Prior to 1979</fullName>
            </value>
            <value>
                <fullName>From 1979 Through 2006</fullName>
            </value>
            <value>
                <fullName>From 2007 Through Present</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pre-War Uninsulated Black EMS</fullName>
            </value>
            <value>
                <fullName>Prior to 1979 EMS</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>