salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/CE_Incentive_zip__c.field-meta.xml
<CustomField>
    <fullName>CE_Incentive_zip__c</fullName>
    <label>Incentive Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>