salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/CE_Last_Import_Date__c.field-meta.xml
<CustomField>
    <fullName>CE_Last_Import_Date__c</fullName>
    <label>Last Import Date</label>
    <type>Date</type>
</CustomField>