salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/CE_Life_Saving_Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>CE_Life_Saving_Equipment_Description__c</fullName>
    <label>Life Saving Equipment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>