salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/CE_Lot__c.field-meta.xml
<CustomField>
    <fullName>CE_Lot__c</fullName>
    <label>Lot</label>
    <length>4</length>
    <type>Text</type>
</CustomField>