salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/CE_NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>CE_NAICS_Description__c</fullName>
    <label>NAICS Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>