salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/CE_Network__c.field-meta.xml
<CustomField>
    <fullName>CE_Network__c</fullName>
    <label>Network</label>
    <length>50</length>
    <type>Text</type>
</CustomField>