salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/CE_Tax_Classification_if_exempt__c.field-meta.xml
<CustomField>
    <fullName>CE_Tax_Classification_if_exempt__c</fullName>
    <label>Tax Classification (if exempt)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>