salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/CE_Time_of_Day_Code__c.field-meta.xml
<CustomField>
    <fullName>CE_Time_of_Day_Code__c</fullName>
    <label>Time of Day Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>