salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/CE_Use_Incentive_Address__c.field-meta.xml
<CustomField>
    <fullName>CE_Use_Incentive_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Incentive Address</label>
    <type>Checkbox</type>
</CustomField>