salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/CE_Vendor_Supplier_Number__c.field-meta.xml
<CustomField>
    <fullName>CE_Vendor_Supplier_Number__c</fullName>
    <label>Vendor (Supplier) Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>