salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Control_Type__c.field-meta.xml
<CustomField>
    <fullName>Control_Type__c</fullName>
    <label>Control Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Occupant sensing controls in large open plan offices: one sensor controlling an area no larger than 125 ft.²</fullName>
            </value>
            <value>
                <fullName>Occupant sensing controls in large open plan offices: one sensor controlling an area no larger than 126 ft.² - 250 ft.²</fullName>
            </value>
            <value>
                <fullName>Occupant sensing controls in large open plan offices: one sensor controlling an area no larger than 251 ft.² -500 ft.²</fullName>
            </value>
            <value>
                <fullName>Occupant sensing controls: applicable to all space types other than large open plan offices with one sensor controlling an area less than 500 ft.²</fullName>
            </value>
            <value>
                <fullName>Institutional tuning in non-daylit areas</fullName>
            </value>
            <value>
                <fullName>Institutional tuning in daylit areas</fullName>
            </value>
            <value>
                <fullName>Demand responsive control and buildings 10,000 ft.² or less</fullName>
            </value>
            <value>
                <fullName>Daylight dimming control - On/Off control: Luminaries in skylit daylit zone or primary sidelit zone</fullName>
            </value>
            <value>
                <fullName>Daylight dimming control - multiple step dimming</fullName>
            </value>
            <value>
                <fullName>Daylight dimming control - continuous dimming</fullName>
            </value>
            <value>
                <fullName>Occupant sensing with daylight dimming controls - On/Off controls</fullName>
            </value>
            <value>
                <fullName>Occupant sensing with daylight dimming controls - multiple step dimming</fullName>
            </value>
            <value>
                <fullName>Networked lighting controls</fullName>
            </value>
            <value>
                <fullName>Networked lighting controls: High occupancy hours</fullName>
            </value>
            <value>
                <fullName>Lighting Control - Network Sensor Control - Code Triggered</fullName>
            </value>
            <value>
                <fullName>Lighting Control - Network Sensor Control - Code Triggered High Occ</fullName>
            </value>
            <value>
                <fullName>On/Off Control</fullName>
            </value>
            <value>
                <fullName>Multistep Control</fullName>
            </value>
            <value>
                <fullName>No Control</fullName>
            </value>
            <value>
                <fullName>On/Off</fullName>
            </value>
            <value>
                <fullName>Multispeed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>