salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Cooling_System__c.field-meta.xml
<CustomField>
    <fullName>Cooling_System__c</fullName>
    <formula>TEXT(Application__r.Cooling_System__c)</formula>
    <label>Cooling System</label>
    <type>Text</type>
</CustomField>