salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Distribution_System_Type__c.field-meta.xml
<CustomField>
    <fullName>Distribution_System_Type__c</fullName>
    <label>Distribution System Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD1</fullName>
            </value>
            <value>
                <fullName>TBD2</fullName>
            </value>
            <value>
                <fullName>TBD3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>