salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centrifugal</fullName>
            </value>
            <value>
                <fullName>Positive Displacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>