salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Estimated_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Rebate__c</fullName>
    <label>* Estimated Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>