salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Gross_Electricity_Savings__c.field-meta.xml
<CustomField>
    <fullName>Gross_Electricity_Savings__c</fullName>
    <label>* Gross Electricity Savings</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>