salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Heating_System__c.field-meta.xml
<CustomField>
    <fullName>Heating_System__c</fullName>
    <formula>TEXT( Application__r.Heating_System__c )</formula>
    <label>Heating System</label>
    <type>Text</type>
</CustomField>