salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Horsepower__c.field-meta.xml
<CustomField>
    <fullName>Horsepower__c</fullName>
    <label>Horsepower</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>