salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Insurance_Info_Phone__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_Phone__c</fullName>
    <label>Insurance Info - Phone</label>
    <type>Phone</type>
</CustomField>