salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Insurance_Info_Policy_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_Policy_Effective_Date__c</fullName>
    <label>Insurance Info - Policy Effective Date</label>
    <type>Date</type>
</CustomField>