salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Insurance_Info_State_2_Char__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_State_2_Char__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Info - State (2 Char)</label>
    <type>Text</type>
</CustomField>