salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Insurance_Info_State__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_State__c</fullName>
    <label>Insurance Info - State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>