salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Insurance_Info_Type_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_Type_of_Coverage__c</fullName>
    <label>Insurance Info - Type of Coverage</label>
    <type>TextArea</type>
</CustomField>