salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Insurance_Info_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_Zip_Code__c</fullName>
    <label>Insurance Info - Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>