salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Job_Rejection_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Job_Rejection_Ratio__c</fullName>
    <formula>NUll</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Rejection Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>