salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/kWH__c.field-meta.xml
<CustomField>
    <fullName>kWH__c</fullName>
    <label>kWh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>