salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Labor_Cost_Full_Savings__c.field-meta.xml
<CustomField>
    <fullName>Labor_Cost_Full_Savings__c</fullName>
    <label>Labor Cost Full Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>