salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Licenses_Certs_1_Type__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Certs_1_Type__c</fullName>
    <label>Licenses &amp; Certs (1) - Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>