salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Licenses_Certs_4_Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Certs_4_Issuing_Authority__c</fullName>
    <label>Licenses &amp; Certs (4) - Issuing Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>