salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Lifetime_kWh__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_kWh__c</fullName>
    <label>Lifetime kWh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>