salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Lighting_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lighting_Hours__c</fullName>
    <label>Lighting Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>