salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stairwell</fullName>
            </value>
            <value>
                <fullName>Corridor</fullName>
            </value>
            <value>
                <fullName>Parking Lot</fullName>
            </value>
            <value>
                <fullName>Parking Garage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>