salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Low_Power_Factor__c.field-meta.xml
<CustomField>
    <fullName>Low_Power_Factor__c</fullName>
    <label>Low Power Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>