salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Measure_Description__c.field-meta.xml
<CustomField>
    <fullName>Measure_Description__c</fullName>
    <label>* Measure Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>