salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Measure_Location__c.field-meta.xml
<CustomField>
    <fullName>Measure_Location__c</fullName>
    <label>Measure Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>