salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Motor_Type__c.field-meta.xml
<CustomField>
    <fullName>Motor_Type__c</fullName>
    <label>Motor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shaded Pole</fullName>
            </value>
            <value>
                <fullName>ECM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>