salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/MPID__c.field-meta.xml
<CustomField>
    <fullName>MPID__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MPID</label>
    <type>Text</type>
</CustomField>