salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Number_of_NY_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_NY_Employees__c</fullName>
    <label>Number of NY Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>