salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/NumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEmployees__c</fullName>
    <label>NumberOfEmployees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>