salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Other_please_specify_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Other_please_specify_Specialty__c</fullName>
    <label>Other, please specify</label>
    <type>TextArea</type>
</CustomField>