salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Part_Load_IPLV__c.field-meta.xml
<CustomField>
    <fullName>Part_Load_IPLV__c</fullName>
    <label>Part Load IPLV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>