salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/PC_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>PC_Agreement_Date__c</fullName>
    <label>PC Agreement - Date</label>
    <type>Date</type>
</CustomField>