salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/PC_Agreement_Email__c.field-meta.xml
<CustomField>
    <fullName>PC_Agreement_Email__c</fullName>
    <label>PC Agreement - Email</label>
    <type>Email</type>
</CustomField>