salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/PC_Agreement_Signature__c.field-meta.xml
<CustomField>
    <fullName>PC_Agreement_Signature__c</fullName>
    <label>PC Agreement - Signature</label>
    <length>200</length>
    <type>Text</type>
</CustomField>