salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Program_Options__c.field-meta.xml
<CustomField>
    <fullName>Program_Options__c</fullName>
    <label>Program Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>