salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Project_Portal_Creation_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Portal_Creation_ID__c</fullName>
    <label>Project Portal Creation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>