salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Promo_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Promo_Incentive__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Promo Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>