salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Proposed_Watts_in_Low_Power__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Watts_in_Low_Power__c</fullName>
    <label>Proposed Watts in Low Power</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>