salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/SEER_IEER__c.field-meta.xml
<CustomField>
    <fullName>SEER_IEER__c</fullName>
    <label>SEER_IEER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>