salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Therm_Annualized_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Therm_Annualized_Consumption__c</fullName>
    <label>Therm Annualized Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>