salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Total_Measure_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Measure_Cost__c</fullName>
    <label>Total Measure Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>