salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measurement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measurement</label>
    <referenceTo>vlocity_cmt__ChargeMeasurement__c</referenceTo>
    <relationshipLabel>Application Line Items</relationshipLabel>
    <relationshipName>Application_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>