salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/VFD_Application__c.field-meta.xml
<CustomField>
    <fullName>VFD_Application__c</fullName>
    <label>VFD Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boiler Feedwater Pump</fullName>
            </value>
            <value>
                <fullName>Chilled Water Pump</fullName>
            </value>
            <value>
                <fullName>Condenser Water Pump</fullName>
            </value>
            <value>
                <fullName>Exhaust Fan</fullName>
            </value>
            <value>
                <fullName>Hot Water Pump</fullName>
            </value>
            <value>
                <fullName>MAF</fullName>
            </value>
            <value>
                <fullName>Return Fan</fullName>
            </value>
            <value>
                <fullName>Supply Fan</fullName>
            </value>
            <value>
                <fullName>Tower Fan</fullName>
            </value>
            <value>
                <fullName>Water Loop Heat Pump Circ Pump</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>