salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Volts__c.field-meta.xml
<CustomField>
    <fullName>Volts__c</fullName>
    <label>Volts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>