salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Watts_Efficient__c.field-meta.xml
<CustomField>
    <fullName>Watts_Efficient__c</fullName>
    <label>Watts Efficient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>