salesforce_sfdx/main/default/objects/Application_Line_Item__c/fields/Years_Under_Current_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Years_Under_Current_Ownership__c</fullName>
    <label>Years Under Current Ownership</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>